--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -88,6 +88,7 @@
     .footer-container {
       flex-direction: column;
       text-align: center;
+      width: fit-content;
     }
   
     .footer-left,
