--- a/src/styles/Solution.css
+++ b/src/styles/Solution.css
@@ -17,9 +17,10 @@
     background-color: rgb(100 164 175);
     color: #fff;
     padding: 30px 40px;
-    max-width: 300px;
+    max-width: 350px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    margin-top: -210px;
+    margin-top: -110px;
+    height: 300px;
 }
 .solutions-content h2 {
   font-size: 32px;
